src/user/include/u_topic.h

/* !!!!!!!!NOTE From here no more includes are allowed!!!!!!! */

#define u_topic(o) \
        ((u_topic)u_objectCheckType(u_object(o), U_TOPIC))
OS_API u_topic
u_topicNew (
    const u_participant p,
    const os_char *name,
    const os_char *typeName,
    const os_char *keyList,
    u_topicQos qos);
OS_API u_result
u_topicGetQos (
    const u_topic _this,
    u_topicQos *qos);
OS_API u_result
u_topicSetQos (
    const u_topic _this,
    const u_topicQos qos);
OS_API os_char *
u_topicName (
    const u_topic _this);
OS_API os_char *
u_topicTypeName (
    const u_topic _this);
OS_API os_char *
u_topicKeyExpr(
    const u_topic _this);
OS_API os_char *
u_topicMetaDescriptor (
    const u_topic _this);
OS_API u_result
u_topicGetInconsistentTopicStatus (
    const u_topic _this,
    u_bool reset,
    u_statusAction action,
    void *arg);
OS_API u_result
u_topicGetAllDataDisposedStatus (
    const u_topic _this,
    u_bool reset,
    u_statusAction action,
    void *arg);
OS_API u_result
u_topicDisposeAllData (
    const u_topic _this);
OS_API u_bool
u_topicContentFilterValidate (
    const u_topic _this,
    const q_expr expr,
    const c_value params[]);
OS_API u_bool
u_topicContentFilterValidate2 (
    const u_topic _this,
    const q_expr expr,
    const c_value params[]);